--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -92,12 +92,15 @@ body {
   -webkit-transition: all 0.3s ease-in-out;
   -moz-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
-  padding: 1rem 3rem;
-  border-radius: 3px;
   display: inline-flex;
   align-items: center;
   justify-content: center;
   word-break: break-word;
+  -webkit-align-items: center;
+  -webkit-justify-content: center;
+  display: -webkit-inline-flex;
+  padding: 1rem 3rem;
+  border-radius: 3px;
 }
 .btn-sm {
   font-weight: 500;
@@ -608,6 +611,7 @@ a:hover {
   left: 30%;
   bottom: 30%;
   transform: rotate(135deg);
+  -webkit-transform: rotate(135deg);
 }
 /* Others*/
 .note-check a[data-value=Rubik] {
@@ -648,6 +652,7 @@ a:hover {
   position: absolute;
   transform: rotate(45deg);
   width: 14px;
+  -webkit-transform: rotate(45deg);
 }
 .form-control {
   background-color: #f5f5f5;
@@ -709,6 +714,7 @@ pre {
 }
 .mbr-section__comments .row {
   justify-content: center;
+  -webkit-justify-content: center;
 }
 /* Forms */
 .mbr-form .btn {
@@ -1160,10 +1166,7 @@ pre {
     align-items: center;
   }
   .navbar-toggleable-sm .navbar-collapse {
-    display: -webkit-box !important;
-    display: -webkit-flex !important;
-    display: -ms-flexbox !important;
-    display: flex !important;
+    display: none;
     width: 100%;
   }
   .navbar-toggleable-sm .navbar-toggler {
@@ -1351,6 +1354,7 @@ pre {
 }
 .menu .navbar.collapsed:not(.beta-menu) {
   flex-direction: column;
+  -webkit-flex-direction: column;
 }
 .carousel-item.active,
 .carousel-item-next,
@@ -1753,18 +1757,65 @@ body {
 .cid-qLSUuixCJK .dropdown-item:hover {
   color: #f76d1a !important;
 }
-.cid-qLSUujpmNK {
-  background-image: url("../../../assets/images/1-4-1920x1080.jpg");
+.cid-r8ZE2P1rvM {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-image: url("../../../assets/images/mbr-3-1920x1281.jpg");
 }
-.cid-qLSUujpmNK .mbr-text,
-.cid-qLSUujpmNK .mbr-section-btn {
+.cid-r8ZE2P1rvM B {
+  color: #ffffff;
+}
+.cid-r8ZE2P1rvM H2 {
+  color: #ffffff;
+}
+.cid-r8ZOTIzkzH {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #efefef;
+}
+.cid-r8ZOTIzkzH .card-box {
+  padding: 0 2rem;
+}
+.cid-r8ZOTIzkzH .mbr-section-btn {
+  padding-top: 1rem;
+}
+.cid-r8ZOTIzkzH .mbr-section-btn a {
+  margin-top: 1rem;
+  margin-bottom: 0;
+}
+.cid-r8ZOTIzkzH h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 2rem;
+}
+.cid-r8ZOTIzkzH p {
+  margin-bottom: 0;
+  text-align: left;
+  padding-top: 1.5rem;
+}
+.cid-r8ZOTIzkzH .mbr-text {
+  color: #767676;
   text-align: center;
-  color: #c1c1c1;
+}
+.cid-r8ZOTIzkzH .card-wrapper {
+  height: 100%;
+  padding-bottom: 2rem;
+  background: #ffffff;
+  box-shadow: 0px 0px 0px 0px rgba(0, 0, 0, 0);
+  transition: box-shadow 0.3s;
+}
+.cid-r8ZOTIzkzH .card-wrapper:hover {
+  box-shadow: 0px 0px 30px 0px rgba(0, 0, 0, 0.05);
+  transition: box-shadow 0.3s;
+}
+.cid-r8ZOTIzkzH .card-title {
+  text-align: center;
 }
 .cid-qLUsGY3ain {
   padding-top: 90px;
   padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-4-1620x1080.jpg");
+  background-color: #efefef;
 }
 .cid-qLUsGY3ain .card-box {
   padding: 0 2rem;
@@ -1808,54 +1859,6 @@ body {
 .cid-qLUsGY3ain .card-title B {
   color: #232323;
 }
-.cid-qLTssP5Vwl {
-  padding-top: 90px;
-  padding-bottom: 90px;
-  background-image: url("../../../assets/images/mbr-1618x1080.jpg");
-}
-.cid-qLTssP5Vwl h4 {
-  text-align: left;
-  font-weight: 500;
-}
-.cid-qLTssP5Vwl p {
-  color: #767676;
-  text-align: left;
-  margin-bottom: 0;
-}
-.cid-qLTssP5Vwl .card-img {
-  text-align: left;
-  -webkit-flex: 1 0 auto;
-  flex: 1 0 auto;
-  width: auto;
-}
-.cid-qLTssP5Vwl .card-img span {
-  font-size: 72px;
-  color: #ff3366;
-}
-.cid-qLTssP5Vwl .card-box {
-  padding-left: 1rem;
-  word-break: break-word;
-}
-@media (max-width: 991px) {
-  .cid-qLTssP5Vwl .card-img {
-    text-align: left;
-    padding-bottom: 0.75rem;
-  }
-  .cid-qLTssP5Vwl .card-box {
-    padding-left: 0;
-  }
-}
-.cid-qLTssP5Vwl .card-title,
-.cid-qLTssP5Vwl .card-img {
-  color: #cc2952;
-  text-align: left;
-}
-.cid-qLTssP5Vwl B {
-  color: #232323;
-}
-.cid-qLTssP5Vwl P {
-  text-align: center;
-}
 .cid-qLToc8KGQ3 {
   padding-top: 90px;
   padding-bottom: 90px;
@@ -1881,6 +1884,127 @@ body {
 .cid-qLToc8KGQ3 .mbr-iconfont {
   font-size: 80px;
   color: #149dcc;
+}
+.cid-r8ZXZr5lDE {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #f9f9f9;
+}
+.cid-r8ZXZr5lDE h4 {
+  font-weight: 500;
+  margin-bottom: 0;
+  text-align: left;
+}
+.cid-r8ZXZr5lDE p {
+  color: #767676;
+  text-align: left;
+}
+.cid-r8ZXZr5lDE .card-box {
+  padding-top: 2rem;
+}
+.cid-r8ZXZr5lDE .card-wrapper {
+  height: 100%;
+}
+.cid-r8ZXZr5lDE .card-title {
+  text-align: center;
+}
+.cid-r96BOEmorj {
+  background: #ffffff;
+  padding-top: 60px;
+  padding-bottom: 60px;
+}
+.cid-r96BOEmorj .video-block {
+  margin: auto;
+}
+@media (max-width: 768px) {
+  .cid-r96BOEmorj .video-block {
+    width: 100% !important;
+  }
+}
+.cid-r96wsml3mq {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-r96wsml3mq .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r96wsml3mq .media-container-row {
+  -webkit-flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+  flex-wrap: wrap;
+}
+.cid-r96wsml3mq .mbr-text {
+  color: #767676;
+}
+.cid-r96wsml3mq .mbr-author-desc {
+  display: block;
+  color: #767676;
+}
+.cid-r96wsml3mq .mbr-author-name {
+  color: #767676;
+}
+.cid-r96wsml3mq .mbr-testimonial .panel-item {
+  background-color: #ffffff;
+}
+.cid-r96wsml3mq .mbr-testimonial .card-block {
+  -webkit-flex-grow: 0;
+  flex-grow: 0;
+  padding: 2.4rem 2.4rem 0 2.4rem;
+}
+.cid-r96wsml3mq .mbr-testimonial .card-block .testimonial-photo {
+  display: inline-block;
+  width: 120px;
+  height: 120px;
+  margin-bottom: 1.6rem;
+  overflow: hidden;
+  border-radius: 50%;
+}
+.cid-r96wsml3mq .mbr-testimonial .card-block .testimonial-photo img {
+  width: 100%;
+  min-width: 100%;
+  min-height: 100%;
+}
+.cid-r96wsml3mq .mbr-testimonial .card-footer {
+  padding-bottom: 2.4rem;
+  border-top: 0;
+  padding-top: 1rem;
+  word-wrap: break-word;
+  word-break: break-word;
+  background: none;
+}
+@media (max-width: 300px) {
+  .cid-r96wsml3mq .testimonial-photo {
+    width: 100% !important;
+    height: auto !important;
+  }
+}
+.cid-r96vXGUeLN {
+  padding-top: 90px;
+  padding-bottom: 90px;
+  background-color: #ffffff;
+}
+.cid-r96vXGUeLN .title {
+  margin-bottom: 2rem;
+}
+.cid-r96vXGUeLN .mbr-section-subtitle {
+  color: #767676;
+}
+.cid-r96vXGUeLN a:not([href]):not([tabindex]) {
+  color: #fff;
+  border-radius: 3px;
+}
+.cid-r96vXGUeLN a.btn-white:not([href]):not([tabindex]) {
+  color: #333;
+}
+.cid-r96vXGUeLN .multi-horizontal {
+  flex-grow: 1;
+  -webkit-flex-grow: 1;
+  max-width: 100%;
+}
+.cid-r96vXGUeLN .input-group-btn {
+  display: block;
+  text-align: center;
 }
 .cid-qLSUujZ0bv {
   padding-top: 30px;
